--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
-    "pg": "^8.7.3"
+    "express": "^4.18.1"
   }
 }
